<resources>

    <string name="addfriend">添加好友</string>
    <string name="addfriend_et_username">请输入用户名</string>
    <string name="addfriend_btn_search">查找</string>
    <string name="addok">加为好友</string>
    <string name="app_name">随心所聚Android版</string>
    <string name="aboutus">关于我们</string>
    <string name="cur_location">目前位置</string>
    <string name="back">返回</string>
    <string name="changeaccount">切换账号</string>
    <string name="deletefriend">删除</string>
    <string name="friendinfo">好友信息</string>
    <string name="guide">最后一张引导图</string>
    <string name="help">帮助介绍</string>
    <string name="head">头像</string>
    <string name="more">更多</string>
    <string name="logo">logo</string>
    <string name="info">基本资料</string>
    <string name="arrows">上下箭头</string>
    <string name="loading">loading</string>
    <string name="myinfo">个人信息</string>
	<string name="login_tv_username">账号：</string>
	<string name="login_tv_password">密码：</string>
	<string name="modify_pwd">修改密码</string>
	<string name="oldpwd">旧密码</string>
	<string name="newpwd1">新密码</string>
	<string name="newpwd2">确认密码</string>
	<string name="login">登录</string>
	<string name="logo_bg">背景图</string>
	<string name="register">注册</string>
	<string name="user_register">注册用户</string>
	<string name="submit">提交</string>
	<string name="entity">确认</string>
	<string name="cancel">取消</string>
	<string name="user_avator">用户头像</string>
	<string name="birthday">生日</string>
	<string name="intro">简介</string>
	<string name="home">所在地</string>
	<string name="gender">性别</string>
	<string name="genderhint">男</string>
	<string name="homehint">安徽-宣城</string>
	<string name="birthhint">1991-12-26</string>
	<string name="emailhint">icety1226@gmail.com</string>
	<string name="introhint">请输入个人简介</string>
	<string name="email">邮箱</string>
	<string name="login_tv_noaccounthint">还没有账号？</string>
	<string name="register_tv_username">用户名</string>
	<string name="register_tv_password">密码</string>
	<string name="register_tv_password_confirm">确认密码</string>
	<string name="register_btn_submit">提交</string>
	<string name="register_btn_backtologin">返回登录</string>
	<string name="rb_home">主页</string>
	<string name="rb_friend">好友</string>
	<string name="rb_message">消息</string>
	<string name="rb_party">聚会</string>
	<string name="rb_setting">设置</string>
	<string name="startapp">开始随心所聚</string>
	<string name="thanks">感谢您的使用！</string>
	<string name="userinfo">用户信息</string>
	<string name="version">版本号：V1.0.0</string>
	<string name="aboutus_tv_developers">开发者</string>
	<string name="aboutus_tv_developer1">小辛安卓</string>
	<string name="aboutus_tv_developer2">HUST USTC</string>
	<string name="hint_login_uname">请输入用户名</string>
	<string name="hint_login_pwd">请输入密码</string>
	
	
</resources>