<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="50dip"
    android:background="@color/blue"
    android:paddingLeft="5dp"
    android:paddingRight="5dp" >

    <Button
        android:id="@+id/btn_back"
         android:layout_width="50dip"
            android:layout_height="wrap_content"
		android:layout_centerVertical="true"
		android:background="@drawable/editimage_back_f"
            android:paddingLeft="5dip"
            android:text="@string/back"
            android:textColor="@color/white"
		android:layout_margin="5dip" />

    <TextView
        android:id="@+id/txt_vb_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/cur_location"
        android:textColor="@color/white"
        android:textSize="25sp" />
    
    <ImageView 
        android:id="@+id/iv_arrows"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/txt_vb_title"
        android:layout_centerVertical="true"
        android:contentDescription="@string/arrows"
        android:src="@drawable/grouplist_title_arrow_down"
        android:layout_marginLeft="5dp"/>
    
</RelativeLayout>
