<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0" />

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:visibility="gone" />

        <RadioGroup
            android:id="@+id/rg_main_btns"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/blue"
            android:gravity="center"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/rb_home"
                style="@style/main_btn_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableTop="@drawable/home_icon"
                android:text="@string/rb_home"
                android:textSize="12sp"
                 />

            <RadioButton
                android:id="@+id/rb_friend"
                style="@style/main_btn_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableTop="@drawable/friend_icon"
                android:text="@string/rb_friend" 
                android:textSize="12sp"/>

            <RadioButton
                android:id="@+id/rb_message"
                style="@style/main_btn_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableTop="@drawable/setting_icon"
                android:text="@string/rb_message" 
                android:textSize="12sp"/>

            <RadioButton
                android:id="@+id/rb_party"
                style="@style/main_btn_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableTop="@drawable/party_icon"
                android:text="@string/rb_party"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/rb_setting"
                style="@style/main_btn_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableTop="@drawable/setting_icon"
                android:text="@string/rb_setting"
                android:textSize="12sp" />
        </RadioGroup>
    </LinearLayout>

</TabHost>