<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <include
        android:id="@+id/title_bar_mydetails"
        layout="@layout/title_bar_mydetails" />

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_bar_mydetails"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/info"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/linearlayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_info"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_marginTop="10.0dip"
        android:background="@drawable/shape_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:paddingLeft="20dip"
                android:text="@string/register_tv_username"
                android:textColor="@android:color/black"
                android:textSize="18.0sp" />

            <TextView
                android:id="@+id/tv_showneckname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15.0dip"
                android:background="@android:color/white"
                android:maxLength="20"
                android:textIsSelectable="false"
                android:paddingLeft="10.0dip"
                android:textColor="#ff545454"
                android:textSize="16.0sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@drawable/shape_line" />

        <LinearLayout
            android:id="@+id/ll_gender"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:paddingLeft="20dip"
                android:text="@string/gender"
                android:textColor="@android:color/black"
                android:textSize="18.0sp" />

            <TextView
                android:id="@+id/tv_showgengder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15.0dip"
                android:background="@android:color/white"
                android:textIsSelectable="false"
                android:maxLength="20"
                android:hint="@string/genderhint"
                android:paddingLeft="10.0dip"
                android:textColor="#ff545454"
                android:textSize="16.0sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@drawable/shape_line" />

        <LinearLayout
            android:id="@+id/ll_addr"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:paddingLeft="20dip"
                android:text="@string/home"
                android:textColor="@android:color/black"
                android:textSize="18.0sp" />

            <TextView
                android:id="@+id/tv_showaddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15.0dip"
                android:textIsSelectable="false"
                android:background="@android:color/white"
                android:hint="@string/homehint"
                android:maxLength="20"
                android:paddingLeft="10.0dip"
                android:textColor="#ff545454"
                android:textSize="16.0sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@drawable/shape_line" />

        <LinearLayout
            android:id="@+id/ll_intro"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="10dip"
            android:layout_marginBottom="10dip"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:paddingLeft="20dip"
                android:text="@string/intro"
                android:textColor="@android:color/black"
                android:textSize="18.0sp" />

            <TextView
                android:id="@+id/tv_showintroduction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:layout_marginRight="15.0dip"
                android:layout_marginTop="10dip"
                android:background="@android:color/white"
                android:textIsSelectable="false"
                android:hint="@string/introhint"
                android:maxLength="20"
                android:paddingLeft="10.0dip"
                android:textColor="#ff545454"
                android:textSize="16.0sp" />
            
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearlayout01"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_marginTop="15.0dip"
        android:background="@drawable/shape_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/ll_birth"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:paddingLeft="20dip"
                android:text="@string/birthday"
                android:textColor="@android:color/black"
                android:textSize="18.0sp" />

           <TextView
                android:id="@+id/tv_showbirthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15.0dip"
                android:background="@android:color/white"
                android:textIsSelectable="false"
                android:maxLength="20"
                android:hint="@string/birthhint"
                android:paddingLeft="10.0dip"
                android:textColor="#ff545454"
                android:textSize="16.0sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@drawable/shape_line" />

        <LinearLayout
            android:id="@+id/ll_email"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:paddingLeft="20dip"
                android:text="@string/email"
                android:textColor="@android:color/black"
                android:textSize="18.0sp" />

            <TextView
                android:id="@+id/tv_showemail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15.0dip"
                android:background="@android:color/white"
                android:textIsSelectable="false"
                android:hint="@string/emailhint"
                android:maxLength="20"
                android:paddingLeft="10.0dip"
                android:textColor="#ff545454"
                android:textSize="16.0sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>