<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
	<ImageView  
	    android:id="@+id/iv_sns4a_picture"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/logo_bg"
        android:scaleType="fitXY"/>
	
        
	<LinearLayout
            android:id="@+id/guide_bottom_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="8.0dip"
            android:layout_marginLeft="8.0dip"
            android:layout_marginRight="8.0dip"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/bt_sns4a_register"
                android:layout_width="20dip"
                android:layout_height="48.0dip"
                android:layout_marginRight="8.0dip"
                android:layout_weight="1.0"
                android:background="@color/blue"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="#FFFFFF"
                android:textSize="16.0sp" />

            <Button
                android:id="@+id/bt_sns4a_login"
                android:layout_width="20dip"
                android:layout_height="48.0dip"
                android:layout_weight="1.0"
                android:background="@color/blue"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="#FFFFFF"
                android:textSize="16.0sp" />
        </LinearLayout>
</RelativeLayout>