<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff" >

    <include
        android:id="@+id/title_bar_login"
        layout="@layout/title_bar_login" />
    
    <ImageView
            android:id="@+id/logo"
            android:layout_width="fill_parent"
            android:layout_height="130dip"
            android:contentDescription="@string/logo"
            android:layout_below="@id/title_bar_login"
            android:scaleType="centerInside"
            android:src="@drawable/logo" />

    <TableLayout
        android:id="@+id/tl_login_tl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:background="@drawable/shape_bg"
        android:stretchColumns="0" >

        <TableRow
            android:id="@+id/tr_login_mail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <EditText
                android:id="@+id/login_et_username"
                android:layout_width="fill_parent"
                android:layout_height="30dip"
                android:background="@null"
                android:hint="@string/hint_login_uname"
                android:paddingLeft="10dip"
                android:singleLine="true"
                android:textColorHint="#ff000000" />
        </TableRow>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@drawable/shape_line" />

        <TableRow
            android:id="@+id/tr_login_pwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <EditText
                android:id="@+id/login_et_password"
                android:layout_width="fill_parent"
                android:layout_height="30dip"
                android:background="@null"
                android:hint="@string/hint_login_pwd"
                android:inputType="textPassword"
                android:paddingLeft="10dip"
                android:singleLine="true"
                android:textColorHint="#ff000000" />
        </TableRow>
    </TableLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tl_login_tl"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:layout_marginTop="20dip" >

        <Button
            android:id="@+id/login_btn_signin"
            android:layout_width="70dip"
            android:layout_height="30dip"
            android:layout_alignParentRight="true"
            android:background="@color/blue"
            android:text="@string/login"
            android:textColor="@color/white" />
    </RelativeLayout>

</RelativeLayout>